--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,16 @@ spring.datasource.username=${DB_USERNAME:World}
 spring.datasource.password=${DB_PASSWORD:World}
 
 # Configuration Hibernate
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # Configuration des scripts SQL
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
-# Configuration du dialecte MySQL
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# Configuration du dialecte PostgreSQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# configurations PostgreSQL utiles
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
