--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,9 +5,8 @@ spring.datasource.username=${DB_USERNAME:World}
 spring.datasource.password=${DB_PASSWORD:World}
 
 # Configuration Hibernate
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
 # Configuration des scripts SQL
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
@@ -18,3 +17,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # configurations PostgreSQL utiles
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
+
+server.port = 8081
