changement du hibernate ddl auto a create drop pour que ça supprime les tables qd springboot est arreté

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=${DB_USERNAME:World}
 spring.datasource.password=${DB_PASSWORD:World}
 
 # Configuration Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 # Configuration des scripts SQL
 spring.sql.init.mode=always
