logo centré dans la page d accueil

--- a/backend/src/test/ressources/application-test.properties
+++ b/backend/src/test/ressources/application-test.properties
@@ -1,10 +1,10 @@
 
 spring.application.name=PostPaf
-# Utilisation d'une base de données en mémoire pour les tests
+# Utilisation d'une base de donnÃ©es en mï¿½moire pour les tests
 spring.datasource.url=jdbc:postgresql://localhost:5432/Test_postpaf
 spring.datasource.username=postgres
 spring.datasource.password=123456
 
-# Désactiver l'initialisation du schéma et des données
+# DÃ©sactiver l'initialisation du schÃ©ma et des donnÃ©es
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.sql.init.mode=never
