--- a/backend/src/main/resources/.env
+++ b/backend/src/main/resources/.env
@@ -1,3 +1,3 @@
-DB_URL=jdbc:postgresql://localhost:5432/postpaf
+DB_URL=jdbc:postgresql://localhost:5432/postgres
 DB_USERNAME=postgres
-DB_PASSWORD=123456
+DB_PASSWORD=Doublesabres1@
